Wed Jun 29 20:47:33 UTC 2011  Steve Huston  <shuston@riverace.com>

        * ace/Select_Reactor_T.cpp:
        * ace/TP_Reactor.cpp:
        * ace/Dev_Poll_Reactor.cpp:
        * ace/WFMO_Reactor.cpp:
          In handle_events(), if returning -1 because the reactor isn't
          ready to handle events, also set errno to ESHUTDOWN to tell the
          caller why. Fixes Bugzilla #3974.

Thu May 12 18:08:47 UTC 2011  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/wrapper_macros.GNU: Added command settings for
          preprocessing C and C++ source files.

        * include/makeinclude/rules.local.GNU: Added rules to preprocess
          C and C++ files when directed.
        
          These allow one to now quickly produce a preprocessed version of
          a source file. Ala... make -f GNUmakefile.ACE ACE.i
          would preprocess ACE.cpp and put the result in ACE.i.

Fri Apr 29 14:01:29 UTC 2011  Steve Huston  <shuston@riverace.com>

        * tests/tests.mpc: For Message_Queue_Test add -bmaxdata:0x20000000 to
          linker options to extend the available data space at run time.
          Avoids the heap smashing the stacks.

Fri Apr 22 15:19:29 UTC 2011  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_aix_ibm.GNU: Add support for XL C++ 11.

Mon Feb 28 20:29:59 UTC 2011  Steve Huston  <shuston@riverace.com>

        * examples/ASX/Event_Server/Event_Server/Event_Analyzer.cpp:
        * examples/ASX/UPIPE_Event_Server/Event_Analyzer.cpp: Replaced the
          name "mod_name" with "module_name" to avoid a clash with macro
          defined in /usr/include/sys/stropts.h encountered when optimized
          build was done.

Mon Feb 28 18:10:19 UTC 2011  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_aix_ibm.GNU: Remove the -qfuncsect
          option from CCFLAGS; it caused an occasional odd problem and the