@@ -88,24 +88,37 @@ public:
 
   /**
    * This method opens and dynamically links a specified DLL.
-   * @param dll_name  The filename or path of the DLL to load.
-   *        If a filename is given to @c open(), the @c ACE::ldfind() is used
-   *        to locate DLLs via the following algorithms: (1) DLL filename
-   *        expansion: @c ACE::ldfind() determines the name of the DLL by
-   *        adding the appropriate prefix and suffix, e.g., it adds the @c lib
-   *        prefix and @c .so suffix for Solaris and the @c .dll suffix for
-   *        Windows and (2) DLL search path: @c ACE::ldfind() will also search
-   *        for the designated DLL using the platform's DLL search path
-   *        environment variable, e.g., it searches for DLLs using @c
-   *        LD_LIBRARY_PATH on many UNIX systems and @c PATH on Windows.
+   * @param dll_name  The filename or path of the DLL to load. ACE will
+   *        attempt to apply the platform's standard library/DLL prefixes
+   *        and suffixes, allowing a simple, unadorned name to be passed
+   *        regardless of platform. The set of name transforms is listed
+   *        below. A @i decorator is a platform's name designator for a debug
+   *        vs release build. For example, on Windows it is usually "d".
+   *        @li Name + decorator + suffix
+   *        @li Name + suffix
+   *        @li Prefix + name + decorator + suffix
+   *        @li Prefix + name + suffix
+   *        @li Name
+   *        Note that the transforms with @i decorator will be avoided if
+   *        ACE is built with the @c ACE_DISABLE_DEBUG_DLL_CHECK config macro.
+   *
+   *        @Note There is another mode for locating library/DLL files that
+   *        was used in old versions of ACE. The alternate method builds
+   *        more combinations of pathname by combining the names transforms
+   *        above with locations listed in the platform's standard "path"
+   *        locations (e.g., @c LD_LIBRARY_PATH). It can be enabled by building
+   *        ACE with the @c ACE_MUST_HELP_DLOPEN_SEARCH_PATH config macro.
+   *        Use of this option is discouraged since it avoids the standard
+   *        platform search options and security mechanisms.
+   *
    * @param open_mode  Flags to alter the actions taken when loading the DLL.
    *        The possible values are:
    *        @li @c RTLD_LAZY (this the default): loads identifier symbols but
    *            not the symbols for functions, which are loaded dynamically
-   *            on-demand.
+   *            on demand.
    *        @li @c RTLD_NOW: performs all necessary relocations when
    *            @a dll_name is first loaded
-   *        @li RTLD_GLOBAL: makes symbols available for relocation
+   *        @li @c RTLD_GLOBAL: makes symbols available for relocation
    *            processing of any other DLLs.
    * @param close_handle_on_destruction  Indicates whether or not the
    *        close() method will be called to close an open DLL when this
