@@ -1,3 +1,9 @@
+Mon Dec  5 22:23:25 UTC 2011  Steve Huston  <shuston@riverace.com>
+
+        * ace/DLL.h:
+        * ace/DLL_Manager.h: Corrected and expanded the descriptions of how
+          DLL/library names are handled, decorated, and located.
+
 Wed Jun 29 20:47:33 UTC 2011  Steve Huston  <shuston@riverace.com>
 
         * ace/Select_Reactor_T.cpp:
